# mesh-evaluation

./: CMakeLists.txt  README.md  main.cpp
examples/: off_to_obj.py  txt_to_ply.py  write_txt.py
examples/input/: 0.off  1.off  10.off  2.off  3.off  4.off  5.off  6.off  7.off  8.off  9.off
examples/reference_off/: 0.off  1.off  10.off  2.off  3.off  4.off  5.off  6.off  7.off  8.off  9.off
examples/reference_txt/: 0.txt  1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
